# agent-based-ants

./: CMakeLists.txt  README.md  ant.h  ant_unittests.cpp  antcolony.h  antpainter.cpp  antpainter.h  colorhelper.cpp  food.cpp  food.h  mainwindow.cpp  mainwindow.h  mappainter.cpp  mappainter.h  object.cpp  pheromone.h  world.cpp  world.h
ant_colony_app/: .gitignore  CMakeLists.txt  ant.cpp  ant.h  ant_unittests.cpp  antcolony.cpp  antpainter.cpp  antpainter.h  colorhelper.cpp  colorhelper.h  food.cpp  food.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  object.cpp  object.h  pheromone.cpp  pheromone.h  world.cpp  world.h
